fix: Make product image sticky on scroll - reduce top offset and add align-self

--- a/frontend/src/app/product/[id]/ProductPage.module.css
+++ b/frontend/src/app/product/[id]/ProductPage.module.css
@@ -97,7 +97,9 @@
 /* Product Images */
 .productImages {
   position: sticky;
-  top: 100px;
+  top: 20px;
+  align-self: start;
+  height: fit-content;
 }
 
 .mainImage {
